--- a/rscard.html
+++ b/rscard.html
@@ -171,7 +171,9 @@
             </div>
             <div class="info">
                 <span class="hello">HELLO<span class="triangle"></span></span>
-                <h1 class="person">方应杭</h1><p class="job">前端开发工程师</p><hr>
+                <h1 class="person">方应杭</h1>
+                <p class="job">前端开发工程师</p>
+                <hr>
                 <dl class="clearfix">
                     <dt>年龄</dt>
                     <dd>18</dd>
@@ -184,7 +186,7 @@
                 </dl>
             </div>
             </div>
-            <footer class="media">
+            <!-- <footer class="media">
                 <a href="#">
                         <svg class="icon" aria-hidden="true">
                                 <use xlink:href="#icon-weibo"></use>
@@ -200,7 +202,7 @@
                                 <use xlink:href="#icon-github"></use>
                             </svg>
                 </a>
-            </footer>
+            </footer> -->
         </div>
 
 </body>
