--- a/rscard.html
+++ b/rscard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
+    <style type="text/css">
         *{
             margin:0;
             padding:0;
@@ -130,17 +130,17 @@
             width: 70%;
             color: #9E99AB;
         }
-        .icon {
-            width: 1em; height: 1em;
-            vertical-align: -0.15em;
-            fill: currentColor;
-            overflow: hidden;
-        }
         .media{
             background-color: #D96163;
         }
+        .icon {
+           width: 1em; height: 1em;
+           vertical-align: -0.15em;
+           fill: currentColor;
+           overflow: hidden;
+        }
     </style>
-    <script src="at.alicdn.com/t/font_584973_yxsumqktu8281tt9.js"></script>
+    <script src="//at.alicdn.com/t/font_584973_yxsumqktu8281tt9.js"></script>
 </head>
 <body>
     <nav class="clearfix">
@@ -187,7 +187,7 @@
                 </dl>
             </div>
             </div>
-            <!-- <footer class="media">
+            <footer class="media">
                 <a href="#">
                         <svg class="icon" aria-hidden="true">
                                 <use xlink:href="#icon-weibo"></use>
@@ -203,7 +203,7 @@
                                 <use xlink:href="#icon-github"></use>
                             </svg>
                 </a>
-            </footer> -->
+            </footer>
         </div>
 
 </body>
